--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3 || ^8.0",
-        "codeigniter4/framework": "^4.4"
+        "codeigniter4/framework": "^4.4",
+        "firebase/php-jwt": "^6.10",
+        "aws/aws-sdk-php": "^3.296"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
